# scapin

./: .env.example  .gitignore  ARCHITECTURE.md  BREAKING_CHANGES.md  CLAUDE.md  LICENSE  MIGRATION.md  README.md  ROADMAP.md  SESSION_NOTES_2026-01-02.md  benchmark_notes.py  check_sync_diff.py  cleanup_metadata.py  find_orphan_apple_notes.py  pyproject.toml  pytest.ini  reproduce_enrichment.py  requirements.txt  scapin.py
config/: defaults.yaml
docs/: BACKLOG_CODE_REVIEW.md  CODE_REVIEW.md  CODE_REVIEW_2026-01-08.md  DESIGN_PHILOSOPHY.md  FOUR_VALETS_IMPLEMENTATION_PLAN.md  FOUR_VALETS_SPEC.md  GAPS_TRACKING.md  SESSION_CONTEXT_DOC_UPDATE.md  UI_VOCABULARY.md  notes-paths-system.md
docs/api/: README.md
docs/architecture/: orphan-questions.md  performance.md  workflow.md
docs/archive/: BACKLOG_CODE_REVIEW.md  RECOMMENDATIONS_JAN_18.md
docs/design/: analysis-transparency-v2.3.md  valets-dashboard-enhanced-v2.4.md
docs/plans/: 2026-01-24-retouche-lifecycle-v2.md  2026-01-24-ui-refactoring.md  2026-01-26-model-economics-analysis.md  2026-01-26-nouveaux-types-notes.md  2026-01-26-prompt-architecture-design.md  2026-01-27-bazin-proactivity-design.md  2026-01-27-chat-memory-design.md  2026-01-27-grimaud-guardian-design.md  2026-01-27-grimaud-implementation.md  2026-01-27-master-roadmap.md  2026-01-27-omnifocus-integration-design.md  2026-01-27-plans-alignment-analysis.md  SESSION-2026-01-24.md  architecture-strategy-2026-01.md  migration-et-ameliorations-retouche.md  migration-note-id-format.md  migration-note-reviewer.md  note-enrichment-system.md  performance-baseline.md  performance-optimization.md  retouche-notes-2026-01.md  workflow-cleanup-autofetch.md
docs/session-history/: 2026-01-02-to-2026-01-06.md
docs/specs/: BUG_51_AI_ANALYSIS_IMPROVEMENTS.md  BUG_55_OTHER_INSTRUCTION_WORKFLOW.md  COHERENCE_PASS_SPEC.md  CROSS_SOURCE_SPEC.md  MEMORY_CYCLES_SPEC.md  MULTI_PASS_SPEC.md  NOTES_UX_SPEC.md  NOTE_GRANULARITY_SPEC.md  NOTE_HYGIENE_SPEC.md  PERIPETIES_REFONTE_SPEC.md  SPRINT_5_SPEC.md  USER_SCENARIOS.md  WORKFLOW_V2_CODE_ANALYSIS.md  WORKFLOW_V2_SIMPLIFIED.md  WORKFLOW_V2_SPEC.md  WORKFLOW_V2_SPEC_DEPRECATED.md
docs/technical/: 01-core.md  02-valets.md  03-integrations.md  04-api.md  05-web.md  06-data-models.md  07-flows.md  README.md
docs/user-guide/: 01-demarrage.md  02-briefing.md  03-flux.md  03-peripeties.md  04-notes.md  05-journal.md  06-architecture.md  07-configuration.md  08-troubleshooting.md  09-canevas.md  10-performance.md  README.md
reports/lighthouse/: AUDIT_REPORT.md
reports/security/: AUDIT_REPORT.md
scripts/: debug_imap.py  dev.sh  fix_corrupted_titles.py  install-hooks.sh  migrate_quality_score_v2.py  migrate_queue_v24.py  stop.sh  test_enrichment_e2e.py  test_four_valets_on_queue.py  view_errors.py
scripts/migration/: note_id_diagnostic.py
scripts/validation/: generate_validation_dataset.py  validate_four_valets.py
src/ai/: __init__.py  model_selector.py  router.py  templates.py
src/cli/: app.py  display_manager.py  menu.py  review_mode.py
src/core/: config_manager.py  constants.py  email_processor.py  entities.py  error_handling.py  error_manager.py  error_store.py  events.py  exceptions.py  interfaces.py  multi_account_processor.py  processing_events.py  recovery_engine.py  scapin_config.py  schemas.py  secrets.py  state_manager.py
src/figaro/: __init__.py  orchestrator.py
src/frontin/: __init__.py  cli.py  menu.py  review_mode.py
src/grimaud/: __init__.py  analyzer.py  executor.py  history.py  models.py  scanner.py
src/jeeves/: __init__.py  cli.py  display_manager.py  menu.py  review_mode.py
src/monitoring/: health.py  logger.py
src/passepartout/: __init__.py  background_worker.py  backup_manager.py  context_engine.py  context_loader.py  embeddings.py  enricher.py  entity_search.py  filage_service.py  frontmatter_parser.py  (+14 more)
tests/: conftest.py  verify_briefing_threshold.py  verify_cli_plumbing.py  verify_graph.py
web/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  screenshot.mjs  tailwind.config.ts  vite.config.ts  vitest.config.ts
(+724 files in other folders)
